--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,8 @@ name: Rust - Test & Publish Package
 on:
   workflow_dispatch:
   push:
+    branches:
+      - colton/improved-examples-and-releases
     tags:
       - 'v*'
 
