--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,6 +3,8 @@ name: Python - Test & Publish Package
 on:
   workflow_dispatch:
   push:
+    branches:
+      - colton/improved-examples-and-releases
     tags:
       - 'v*'
 
@@ -234,25 +236,24 @@ jobs:
 #        with:
 #          name: wheels
 #          path: toolchain/chidori/dist
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs:
-      - python-macos
-      - python-macos-universal
-      - python-windows
-      - python-linux
-#      - python-linux-cross
-#    if: ${{ github.ref == 'refs/heads/main' }}
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: wheels
-      - uses: actions/setup-python@v2
-      - name: Publish to PyPi
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        run: |
-          pip install --upgrade twine
-           upload --skip-existing *
+#  release:
+#    name: Release
+#    runs-on: ubuntu-latest
+#    needs:
+#      - python-macos
+#      - python-macos-universal
+#      - python-windows
+#      - python-linux
+##      - python-linux-cross
+##    if: ${{ github.ref == 'refs/heads/main' }}
+#    steps:
+#      - uses: actions/download-artifact@v3
+#        with:
+#          name: wheels
+#      - uses: actions/setup-python@v2
+#      - name: Publish to PyPi
+#        env:
+#          TWINE_USERNAME: __token__
+#          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+#        run: |
+#          pip install --upgrade twine upload --skip-existing *
