--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
           override: true
       - name: Build and Test
         working-directory: toolchain
-        run: cargo build --all && cargo test --all
+        run: sudo apt-get install -y libgtk-3-dev && cargo build --all && cargo test --all
 
       - name: Publish prompt-graph-core
         working-directory: toolchain/prompt-graph-core
