fix the nodejs example

--- a/examples/nodejs/top-ai-launches-hn/Dockerfile
+++ b/examples/nodejs/top-ai-launches-hn/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as a parent image
-FROM node:16
+FROM node:20
 
 # Set the working directory in the container to /app
 WORKDIR /app
@@ -8,7 +8,8 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install --only=production
+RUN ldd --version && npm install --only=production
+
 
 # Copy the current directory contents into the container at /app
 COPY . .
