--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and Test
         working-directory: toolchain
         run: |
-          sudo apt-get install -y libgtk-3-dev libsoup-3.0-dev 
+          sudo apt-get install -y libgtk-3-dev libsoup-3.0-dev  libjavascriptcoregtk-4.1-dev
           cargo build --all 
           cargo test --all
       - name: Publish prompt-graph-core
