--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,13 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rustflags: ""
-      - run: cargo test
+      - name: Test Prompt Graph Core
+        run: cargo test
+        working-directory: toolchain/prompt-graph-core
+      - name: Test Prompt Graph Exec
+        run: cargo test
+        working-directory: toolchain/prompt-graph-exec
+      - name: Test Chidori
+        run: cargo test
         working-directory: toolchain/chidori
 
