--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,6 @@ name: Rust - Test & Publish Package
 on:
   workflow_dispatch:
   push:
-    branches:
-      - colton/improved-examples-and-releases
     tags:
       - 'v*'
 
@@ -14,7 +12,7 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
-
+#    if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
