--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Set release version
         if: env.ARTIFACT_VERSION == ''
-        run: python3 ../scripts/get_target_version.py
+        run: python3 ./toolchain/scripts/get_target_version.py
 
       - name: Create GitHub release
         id: release
