--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "prompt-graph-core",
     "prompt-graph-exec",
+    "prompt-graph-std",
     "prompt-graph-ui/src-tauri",
     "chidori",
 ]
