--- a/toolchain/prompt-graph-core/Cargo.toml
+++ b/toolchain/prompt-graph-core/Cargo.toml
@@ -38,6 +38,8 @@ env_logger.workspace = true
 log.workspace = true
 futures.workspace = true
 rkyv.workspace = true
+reqwest.workspace = true
+bytes.workspace = true
 
 ariadne = "0.3.0"
 chumsky = "0.9.3"
@@ -53,6 +55,8 @@ crossbeam-utils = "0.8.15"
 priority-queue = "1.3.2"
 rand = "0.8"
 async-trait = "0.1.69"
+dotenv = "0.15.0"
+futures-util = "0.3.28"
 
 # TODO: make optional
 
@@ -64,6 +68,7 @@ http-body-util = "0.1.0-rc.2"
 zip = "0.6.6"
 qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
+openai-api-rs = "2.1.4"
 
 base64 = "0.21.2"
 
