--- a/toolchain/prompt-graph-ui/src-tauri/Cargo.toml
+++ b/toolchain/prompt-graph-ui/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-plugin-os = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
 tauri-plugin-window = "2.0.0-alpha"
 chidori = { version = "0.1.26" }
-prompt-graph-core = { path = "../../prompt-graph-core", version = "0.1.26" }
+prompt-graph-core = { path = "../../chidori-core", version = "0.1.26" }
 prost.workspace = true
 tokio.workspace = true
 tracing.workspace = true
