--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "chidori-core",
+    "chidori-server",
     "prompt-graph-exec",
     "prompt-graph-ui/src-tauri",
     "chidori",
