snapshot of prior state where we had the chidori custom parser

--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -1,9 +1,7 @@
 [workspace]
 members = [
     "chidori-core",
-    "chidori-server",
-    "prompt-graph-exec",
-    "prompt-graph-ui/src-tauri",
+    "chidori-ui/src-tauri",
     "chidori",
 ]
 
