--- a/toolchain/chidori/Cargo.toml
+++ b/toolchain/chidori/Cargo.toml
@@ -37,7 +37,7 @@ sqlparser.workspace = true
 openssl = { version = "0.10.55", features = ["vendored"] }
 
 once_cell = "1"
-prompt-graph-core = { path = "../chidori-core", version = "^0.1.28" }
+chidori-core = { path = "../chidori-core", version = "^0.1.28" }
 wasm-bindgen = {version = "0.2.86", features = []}
 anyhow.workspace = true
 indoc.workspace = true
@@ -57,12 +57,6 @@ pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"], o
 pyo3-log = { version = "0.8.2", optional = true }
 
 neon-serde3 = "0.10.0"
-
-
-[dependencies.prompt-graph-exec]
-path = "../prompt-graph-exec"
-version = "0.1.0"
-default-features = false
 
 [dependencies.neon]
 version = "0.10.1"
