enormous refactor cont

--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "chidori-core",
     "chidori-ui/src-tauri",
     "chidori",
+    "chidori-prompt-format", "chidori-im-hashmap", "chidori-static-analysis",
 ]
 resolver = "2"
 
