--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -21,7 +21,6 @@ python = []
 nodejs = []
 build-protos = []
 
-
 # https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
 [dependencies]
 gluesql.workspace = true
@@ -68,6 +67,9 @@ swc_ecma_ast = {  version = "0.110.15"}
 # Support for parsing python
 rustpython-parser = "0.3.0"
 
+chidori-prompt-format = { path = "../chidori-prompt-format" }
+chidori-static-analysis = { path = "../chidori-static-analysis" }
+
 
 # TODO: make optional
 yaml-front-matter = "0.1.0"
@@ -83,6 +85,17 @@ rustpython = { git = "https://github.com/RustPython/RustPython.git" }
 rustpython-vm = { git = "https://github.com/RustPython/RustPython.git" }
 
 base64 = "0.21.2"
+num = "0.4.1"
+
+
+once_cell = "1"
+neon-serde3 = "0.10.0"
+
+[dependencies.neon]
+version = "0.10.1"
+default-features = false
+features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
+
 
 [build-dependencies]
 tonic-build = "0.9.2"
