--- a/toolchain/chidori-core/package.json
+++ b/toolchain/chidori-core/package.json
@@ -4,7 +4,7 @@
   "description": "Chidori is a library for building and running reactive AI agents.",
   "main": "package_node/index.js",
   "scripts": {
-    "build": "cargo-cp-artifact -a cdylib _chidori_core  ./package_node/native/chidori-core.node -- cargo build --message-format=json-render-diagnostics --features nodejs",
+    "build": "RUSTFLAGS=\"-C link-arg=-Wl,-rpath,/Users/coltonpierson/.rustup/toolchains/nightly-aarch64-apple-darwin/lib\" cargo-cp-artifact -a cdylib _chidori_core ./package_node/native/chidori-core.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
     "build-release": "npm run build -- --release",
     "test-rust": "cargo test",
