--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -11,8 +11,8 @@ description = "Core of Chidori, compiles graph and node definitions into an inte
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "chidori_core"
-crate-type = ["cdylib", "lib"]
+name = "_chidori_core"
+crate-type = ["lib", "cdylib"]
 bench = false
 proc-macro = true
 
@@ -70,6 +70,8 @@ rustpython-parser = "0.3.0"
 chidori-prompt-format = { path = "../chidori-prompt-format" }
 chidori-static-analysis = { path = "../chidori-static-analysis" }
 
+ts-rs = "7.1"
+
 
 # TODO: make optional
 yaml-front-matter = "0.1.0"
@@ -90,12 +92,15 @@ num = "0.4.1"
 
 once_cell = "1"
 neon-serde3 = "0.10.0"
+target-lexicon = "0.12.13"
+dirs = "5.0.1"
 
 [dependencies.neon]
 version = "0.10.1"
 default-features = false
 features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
 
-
 [build-dependencies]
 tonic-build = "0.9.2"
+target-lexicon = "0.12"
+dirs = "3.0"
