--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -83,8 +83,9 @@ qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
 openai-api-rs = "2.1.4"
 
-rustpython = { git = "https://github.com/RustPython/RustPython.git" }
-rustpython-vm = { git = "https://github.com/RustPython/RustPython.git" }
+#rustpython = { git = "https://github.com/RustPython/RustPython.git" }
+#rustpython-vm = { git = "https://github.com/RustPython/RustPython.git" }
+pyo3 = { version = "0.20.2", features = ["extension-module"] }
 
 base64 = "0.21.2"
 num = "0.4.1"
