--- a/toolchain/chidori-static-analysis/Cargo.toml
+++ b/toolchain/chidori-static-analysis/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chidori-static-analysis"
-version = "0.1.1"
+version = "0.1.2"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -38,3 +38,10 @@ lazy_static = "1.4.0"
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
+[dependencies.ruff_python_ast]
+git = "https://github.com/astral-sh/ruff"
+rev = "907322088720aec94ee57979baca7157778c5f76"
+
+[dependencies.ruff_python_codegen]
+git = "https://github.com/astral-sh/ruff"
+rev = "907322088720aec94ee57979baca7157778c5f76"
