--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -12,7 +12,7 @@ description = "Core of Chidori, compiles graph and node definitions into an inte
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "_chidori_core"
-crate-type = ["lib", "cdylib"]
+crate-type = ["cdylib", "lib"]
 bench = false
 proc-macro = true
 
@@ -57,12 +57,6 @@ async-trait = "0.1.69"
 dotenv = "0.15.0"
 futures-util = "0.3.28"
 
-# TODO: make optional
-
-# Support for parsing typescript/javascript
-swc_common = {  version = "0.33.12", features = ["tty-emitter"]}
-swc_ecma_parser = {  version = "0.141.33", features = ["typescript"]}
-swc_ecma_ast = {  version = "0.110.15"}
 
 # Support for parsing python
 rustpython-parser = "0.3.0"
@@ -85,7 +79,10 @@ openai-api-rs = "2.1.4"
 
 #rustpython = { git = "https://github.com/RustPython/RustPython.git" }
 #rustpython-vm = { git = "https://github.com/RustPython/RustPython.git" }
-pyo3 = { version = "0.20.2", features = ["extension-module"] }
+pyo3 = { version = "0.20.2", features = ["abi3-py37"]}
+pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
+pyo3-log = { version = "0.9.0"}
+
 
 base64 = "0.21.2"
 num = "0.4.1"
@@ -105,3 +102,4 @@ features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
 tonic-build = "0.9.2"
 target-lexicon = "0.12"
 dirs = "3.0"
+pyo3-build-config = "0.19.1"
