--- a/toolchain/chidori-static-analysis/Cargo.toml
+++ b/toolchain/chidori-static-analysis/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chidori-static-analysis"
-version = "0.1.2"
+version = "0.1.3"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -21,9 +21,9 @@ anyhow.workspace = true
 serde.workspace = true
 
 # Support for parsing typescript/javascript
-swc_common = {  version = "0.33.12", features = ["tty-emitter"]}
-swc_ecma_parser = {  version = "0.141.33", features = ["typescript"]}
-swc_ecma_ast = {  version = "0.110.15"}
+swc_common = {  version = "0.33.14", features = ["tty-emitter", "arbitrary"]}
+swc_ecma_parser = {  version = "0.142.0", features = ["typescript"]}
+swc_ecma_ast = {  version = "0.111.0", features = ["arbitrary"]}
 
 # Support for parsing python
 rustpython-parser = "0.3.0"
@@ -38,10 +38,10 @@ lazy_static = "1.4.0"
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
-[dependencies.ruff_python_ast]
-git = "https://github.com/astral-sh/ruff"
-rev = "907322088720aec94ee57979baca7157778c5f76"
-
-[dependencies.ruff_python_codegen]
-git = "https://github.com/astral-sh/ruff"
-rev = "907322088720aec94ee57979baca7157778c5f76"
+#[dependencies.ruff_python_ast]
+#git = "https://github.com/astral-sh/ruff"
+#rev = "907322088720aec94ee57979baca7157778c5f76"
+#
+#[dependencies.ruff_python_codegen]
+#git = "https://github.com/astral-sh/ruff"
+#rev = "907322088720aec94ee57979baca7157778c5f76"
