--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -88,16 +88,11 @@ pyo3-log = { version = "0.9.0"}
 base64 = "0.21.2"
 num = "0.4.1"
 
-
 once_cell = "1"
-neon-serde3 = "0.10.0"
 target-lexicon = "0.12.13"
 dirs = "5.0.1"
 
-[dependencies.neon]
-version = "0.10.1"
-default-features = false
-features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
+tracing = "0.1"
 
 [build-dependencies]
 tonic-build = "0.9.2"
