--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,22 +25,22 @@ jobs:
       - name: Build and Test
         working-directory: toolchain
         run: |
-          cargo build --package prompt-graph-core --package prompt-graph-exec --package chidori
-          cargo test --package prompt-graph-core --package prompt-graph-exec --package chidori
-      - name: Publish prompt-graph-core
-        working-directory: toolchain/prompt-graph-core
+          cargo build --package chidori-core --package chidori-im-hashmap --package chidori-prompt-format --package chidori-static-analysis
+          cargo test --package chidori-core --package chidori-im-hashmap --package chidori-prompt-format --package chidori-static-analysis
+      - name: Publish chidori-prompt-format
+        working-directory: toolchain/chidori-prompt-format
         run: cargo publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
-      - name: Publish prompt-graph-exec
-        working-directory: toolchain/prompt-graph-exec
+      - name: Publish chidori-static-analysis
+        working-directory: toolchain/chidori-static-analysis
         run: cargo publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
-      - name: Publish chidori
-        working-directory: toolchain/chidori
+      - name: Publish chidori-core
+        working-directory: toolchain/chidori-core
         run: cargo publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
