tracing, state, graph

--- a/toolchain/chidori-ui/package.json
+++ b/toolchain/chidori-ui/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "^2.5.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tauri-apps/cli": "^1.5.11",
-    "svelte": "^4.2.7",
+    "svelte": "^4.2.12",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -22,12 +22,15 @@
   },
   "type": "module",
   "dependencies": {
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.26.0",
     "@tauri-apps/api": "^1.5.3",
     "@xyflow/svelte": "^0.0.39",
     "ag-grid-community": "^31.1.1",
     "autoprefixer": "^10.4.18",
     "bits-ui": "^0.19.7",
     "clsx": "^2.1.0",
+    "codemirror": "^6.0.1",
     "jsverify": "^0.8.4",
     "lucide-svelte": "^0.358.0",
     "pako": "^2.1.0",
