--- a/toolchain/chidori-ui/src-tauri/Cargo.toml
+++ b/toolchain/chidori-ui/src-tauri/Cargo.toml
@@ -26,6 +26,10 @@ chidori-core = { path = "../../chidori-core" }
 dirs = "5.0.1"
 target-lexicon = "0.12.14"
 petgraph.workspace = true
+diskmap = "0.2.0"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+notify-debouncer-full = "0.3.1"
+ts-rs = "7.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
