--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -66,7 +66,9 @@ ts-rs = "7.1"
 
 # TODO: make optional
 yaml-front-matter = "0.1.0"
-deno_core = "0.238.0"
+deno = {path = "/Users/coltonpierson/work/deno/cli"}
+deno_runtime = {path = "/Users/coltonpierson/work/deno/runtime"}
+deno_core = "0.272.0"
 deno_ast = { version = "0.34.2", features = ["transpiling"] }
 #starlark = { version = "0.9.0"}
 http-body-util = "0.1.0-rc.2"
@@ -100,8 +102,9 @@ tracing-bunyan-formatter = "0.3.3"
 tracing-opentelemetry = "0.23.0"
 opentelemetry-semantic-conventions = "0.14.0"
 no_deadlocks = "1.3.2"
-ollama-rs = { version = "0.1.7", features = ["stream"] }
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+# ollama-rs = { version = "0.1.0", features = ["stream"] }
+rusqlite = { version = "0.29.0", features = ["bundled"] }
+uuid = { version = "1.6.1", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.9.2"
