--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -77,11 +77,13 @@ qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
 openai-api-rs = "2.1.4"
 
+
 #rustpython = { git = "https://github.com/RustPython/RustPython.git" }
 #rustpython-vm = { git = "https://github.com/RustPython/RustPython.git" }
 pyo3 = { version = "0.20.3", features = ["abi3-py37"]}
 pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
 pyo3-log = { version = "0.9.0"}
+rye = {path = "/Users/coltonpierson/work/rye/rye"}
 
 fantoccini = "0.19.3"
 
