--- a/toolchain/chidori-ui/src-tauri/Cargo.toml
+++ b/toolchain/chidori-ui/src-tauri/Cargo.toml
@@ -18,8 +18,8 @@ dirs = "3.0"
 pyo3-build-config = "0.19.1"
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
+serde_json.workspace = true
 tauri = { version = "1.6.1", features = [ "dialog-open", "fs-all"] }
 tokio = { version = "1.35.0", features = ["full"] }
 chidori-core = { path = "../../chidori-core" }
