--- a/toolchain/chidori-ui/src-tauri/Cargo.toml
+++ b/toolchain/chidori-ui/src-tauri/Cargo.toml
@@ -18,10 +18,10 @@ dirs = "3.0"
 pyo3-build-config = "0.19.1"
 
 [dependencies]
-serde.workspace = true
-serde_json.workspace = true
 tauri = { version = "1.6.1", features = [ "dialog-open", "fs-all"] }
-tokio = { version = "1.35.0", features = ["full"] }
+serde_json.workspace = true
+serde.workspace = true
+tokio.workspace = true
 chidori-core = { path = "../../chidori-core" }
 dirs = "5.0.1"
 target-lexicon = "0.12.14"
