--- a/toolchain/chidori-ui/src-tauri/Cargo.toml
+++ b/toolchain/chidori-ui/src-tauri/Cargo.toml
@@ -19,8 +19,10 @@ pyo3-build-config = "0.19.1"
 
 [dependencies]
 tauri = { version = "1.6.1", features = [ "dialog-open", "fs-all"] }
-serde_json.workspace = true
+
 serde.workspace = true
+serde_json.workspace = true
+serde_derive.workspace = true
 tokio.workspace = true
 chidori-core = { path = "../../chidori-core" }
 dirs = "5.0.1"
@@ -30,6 +32,7 @@ diskmap = "0.2.0"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 notify-debouncer-full = "0.3.1"
 ts-rs = "7.1"
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
