--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -30,6 +30,7 @@ sqlparser = "0.34.0"
 anyhow = { version = "1.0", default-features = false }
 indoc = "1.0.3"
 serde = { version = "=1.0.197", features = ["derive"] }
+serde_derive = "=1.0.197"
 serde_json = "=1.0.115"
 tonic = "0.9"
 prost = "0.11"
@@ -51,3 +52,4 @@ tracing-flame = "0.2.0"
 bincode = "2.0.0-rc.3"
 
 petgraph = "0.6.3"
+
