--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -29,8 +29,8 @@ protobuf = "3.2.0"
 sqlparser = "0.34.0"
 anyhow = { version = "1.0", default-features = false }
 indoc = "1.0.3"
-serde = { version = "=1.0.197", features = ["derive"] }
-serde_derive = "=1.0.197"
+serde = { version = "1", features = ["derive"] }
+serde_derive = "1"
 serde_json = "=1.0.115"
 tonic = "0.9"
 prost = "0.11"
@@ -53,3 +53,6 @@ bincode = "2.0.0-rc.3"
 
 petgraph = "0.6.3"
 
+[patch.crates-io]
+deno = {path = "../../deno/cli"}
+deno_runtime = {path = "../../deno/runtime"}
