--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -70,8 +70,8 @@ dashmap = "5.5.3"
 
 # TODO: make optional
 yaml-front-matter = "0.1.0"
-deno = {path = "/Users/coltonpierson/work/deno/cli"}
-deno_runtime = {path = "/Users/coltonpierson/work/deno/runtime"}
+deno = "1.41.3"
+deno_runtime = "0.150.0"
 deno_core = "0.272.0"
 #starlark = { version = "0.9.0"}
 http-body-util = "0.1.0-rc.2"
