--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -29,9 +29,9 @@ protobuf = "3.2.0"
 sqlparser = "0.34.0"
 anyhow = { version = "1.0", default-features = false }
 indoc = "1.0.3"
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1"
-serde_json = "=1.0.115"
+serde_json = "1.0.115"
 tonic = "0.9"
 prost = "0.11"
 tokio = { version = "1", features = ["full", "tracing"] }
@@ -50,9 +50,11 @@ tracing-log = "0.1.3"
 tracing-chrome = "0.7.1"
 tracing-flame = "0.2.0"
 bincode = "2.0.0-rc.3"
-
 petgraph = "0.6.3"
 
 [patch.crates-io]
 deno = {path = "../../deno/cli"}
 deno_runtime = {path = "../../deno/runtime"}
+serde = {path = "../../serde/serde" }
+serde_derive = {path = "../../serde/serde_derive" }
+tauri = {path = "../../tauri/core/tauri" }
