--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -55,6 +55,7 @@ async-trait = "0.1.69"
 dotenv = "0.15.0"
 futures-util = "0.3.28"
 typed-arena = "2.0.1"
+insta.workspace = true
 
 
 # Support for parsing python
@@ -78,7 +79,7 @@ http-body-util = "0.1.0-rc.2"
 zip = "0.6.6"
 qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
-openai-api-rs = "2.1.4"
+openai-api-rs = "4.0.8"
 
 
 #rustpython = { git = "https://github.com/RustPython/RustPython.git" }
