--- a/toolchain/chidori-static-analysis/Cargo.toml
+++ b/toolchain/chidori-static-analysis/Cargo.toml
@@ -20,6 +20,7 @@ indoc.workspace = true
 anyhow.workspace = true
 serde.workspace = true
 insta.workspace = true
+thiserror.workspace = true
 
 # Support for parsing typescript/javascript
 swc_common = {  version = "0.33.14", features = ["tty-emitter", "arbitrary"]}
