--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -16,15 +16,13 @@ crate-type = ["cdylib", "lib"]
 bench = false
 proc-macro = true
 
-# https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
 [dependencies]
-protobuf.workspace = true
-sqlparser.workspace = true
 anyhow.workspace = true
 indoc.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
-serde_json.workspace = true
+# Rust compiler is not able to identify across crates that workspace dependencies are identical (bug?)
+serde_json = "=1.0.115"
 tonic.workspace = true
 prost.workspace = true
 tokio.workspace = true
@@ -66,9 +64,6 @@ rustpython-parser = "0.3.0"
 chidori-prompt-format = { path = "../chidori-prompt-format" }
 chidori-static-analysis = { path = "../chidori-static-analysis" }
 
-ts-rs = "7.1"
-
-
 dashmap = "5.5.3"
 
 # TODO: make optional
@@ -78,7 +73,6 @@ deno_runtime = "0.150.0"
 deno_core = "0.272.0"
 #starlark = { version = "0.9.0"}
 http-body-util = "0.1.0-rc.2"
-zip = "0.6.6"
 qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
 openai-api-rs = "4.0.8"
@@ -112,7 +106,14 @@ opentelemetry-semantic-conventions = "0.14.0"
 no_deadlocks = "1.3.2"
 # ollama-rs = { version = "0.1.0", features = ["stream"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
-uuid = { version = "1.6.1", features = ["v4"] }
+
+[dependencies.uuid]
+version = "1.8.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
 
 [build-dependencies]
 tonic-build = "0.9.2"
@@ -121,3 +122,8 @@ dirs = "3.0"
 pyo3-build-config = "0.19.1"
 rye = {path = "/Users/coltonpierson/work/rye/rye"}
 anyhow = "1.0.82"
+
+
+
+[package.metadata.pyo3]
+python = "/opt/homebrew/bin/python3.11"
