--- a/toolchain/chidori-prompt-format/Cargo.toml
+++ b/toolchain/chidori-prompt-format/Cargo.toml
@@ -19,7 +19,7 @@ serde-wasm-bindgen = "0.4"
 indoc.workspace = true
 anyhow.workspace = true
 serde.workspace = true
-serde_json.workspace = true
+serde_json = "=1.0.115"
 serde_yaml = "0.9"
 
 
