--- a/toolchain/Cargo.toml
+++ b/toolchain/Cargo.toml
@@ -52,6 +52,14 @@ petgraph = "0.6.3"
 insta = { version = "1.38.0", features = ["yaml", "redactions"] }
 thiserror = "1.0.58"
 
+[workspace.dependencies.uuid]
+version = "=1.8.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
+
 [patch.crates-io]
 deno = { git = "https://github.com/ThousandBirdsInc/deno", rev = "783f25180b82ae90fe21a9c0118c104da06db25c" }
 deno_runtime = { git = "https://github.com/ThousandBirdsInc/deno", rev = "783f25180b82ae90fe21a9c0118c104da06db25c" }
