--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -23,6 +23,7 @@ serde.workspace = true
 serde_derive.workspace = true
 # Rust compiler is not able to identify across crates that workspace dependencies are identical (bug?)
 serde_json = "=1.0.115"
+uuid.workspace = true
 tonic.workspace = true
 prost.workspace = true
 tokio.workspace = true
@@ -106,14 +107,6 @@ opentelemetry-semantic-conventions = "0.14.0"
 no_deadlocks = "1.3.2"
 # ollama-rs = { version = "0.1.0", features = ["stream"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
-
-[dependencies.uuid]
-version = "1.8.0"
-features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
 
 [build-dependencies]
 tonic-build = "0.9.2"
