--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -9,11 +9,12 @@ repository.workspace = true
 
 [dependencies]
 bevy = "0.13.2"
+egui = { version = "0.27.2", default-features = false, features = ["bytemuck"] }
+image = { version = "0.24", features = ["jpeg", "png"] }
 bevy_utils = "0.13.2"
-bevy_egui = "0.27.0"
 bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ]}
 bevy_prototype_lyon = "0.11.0"
-egui_extras = { version = "0.27.2" , features = ["syntect"]}
+egui_extras = { version = "0.27.2" , features = ["syntect", "all_loaders"]}
 egui_tiles = "0.8.0"
 bevy_cosmic_edit = { version = "0.19.0", features = ["multicam"] }
 rfd = "0.14.1"
@@ -27,6 +28,7 @@ tinyset = "0.4.10"
 anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+uuid.workspace = true
 serde_derive.workspace = true
 tokio.workspace = true
 futures.workspace = true
@@ -39,9 +41,24 @@ target-lexicon = "0.12.14"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 notify-debouncer-full = "0.3.1"
 once_cell = "1.19.0"
+crossbeam-channel = "0.5.12"
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
+webbrowser = { version = "0.8.2", optional = true }
 
+[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
+arboard = { version = "3.2.0", optional = true }
+thread_local = { version = "1.1.0", optional = true }
 
 [build-dependencies]
 target-lexicon = "0.12"
 dirs = "3.0"
 pyo3-build-config = "0.19.1"
+
+# https://github.com/mvlabat/bevy_egui/blob/main/Cargo.toml
+[features]
+default = ["manage_clipboard", "open_url", "default_fonts", "render"]
+manage_clipboard = ["arboard", "thread_local"]
+open_url = ["webbrowser"]
+default_fonts = ["egui/default_fonts"]
+render = ["bevy/bevy_render"]
