--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -36,7 +36,7 @@ bytes.workspace = true
 petgraph.workspace = true
 thiserror.workspace = true
 
-
+fancy-regex = "0.13.0"
 tokio-cron-scheduler = "0.10.0"
 axum = "0.7.4"
 regex = "1.10.3"
@@ -57,6 +57,7 @@ dotenv = "0.15.0"
 futures-util = "0.3.28"
 typed-arena = "2.0.1"
 insta.workspace = true
+sha1 = "0.10.5"
 
 
 # Support for parsing python
