--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -8,6 +8,8 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
+objc = "0.2"
+winit = "=0.29.15"
 bevy = "0.13.2"
 egui = { version = "0.27.2", default-features = false, features = ["bytemuck"] }
 image = { version = "0.24", features = ["jpeg", "png"] }
@@ -45,6 +47,7 @@ crossbeam-channel = "0.5.12"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 webbrowser = { version = "0.8.2", optional = true }
+serde_yaml = "0.8.26"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 arboard = { version = "3.2.0", optional = true }
