--- a/toolchain/chidori-static-analysis/Cargo.toml
+++ b/toolchain/chidori-static-analysis/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+serde_yaml = "0.9.25"
 wasm-bindgen = { version = "0.2.89", features = [] }
 serde-wasm-bindgen = "0.4"
 indoc.workspace = true
