--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -48,6 +48,7 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 webbrowser = { version = "0.8.2", optional = true }
 serde_yaml = "0.8.26"
+regex = "1.10.4"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 arboard = { version = "3.2.0", optional = true }
