--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -108,6 +108,7 @@ opentelemetry-semantic-conventions = "0.14.0"
 no_deadlocks = "1.3.2"
 # ollama-rs = { version = "0.1.0", features = ["stream"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
+which = "4.4.2"
 
 [build-dependencies]
 tonic-build = "0.9.2"
