--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -85,7 +85,7 @@ openai-api-rs = "4.0.8"
 pyo3 = { version = "0.20.3", features = ["abi3-py37"]}
 pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
 pyo3-log = { version = "0.9.0"}
-rye = {path = "/Users/coltonpierson/work/rye/rye"}
+rye = "0.32.0"
 
 fantoccini = "0.19.3"
 
@@ -115,7 +115,7 @@ tonic-build = "0.9.2"
 target-lexicon = "0.12"
 dirs = "3.0"
 pyo3-build-config = "0.19.1"
-rye = {path = "/Users/coltonpierson/work/rye/rye"}
+rye = "0.32.0"
 anyhow = "1.0.82"
 
 
