--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -66,6 +66,7 @@ rustpython-parser = "0.3.0"
 chidori-prompt-format = { path = "../chidori-prompt-format" }
 chidori-static-analysis = { path = "../chidori-static-analysis" }
 
+indexmap = "2.2.6"
 dashmap = "5.5.3"
 
 # TODO: make optional
@@ -77,7 +78,7 @@ deno_core = "0.272.0"
 http-body-util = "0.1.0-rc.2"
 qdrant-client = "1.3.0"
 hnsw_rs_thousand_birds = "0.1.20"
-openai-api-rs = "4.0.8"
+openai-api-rs = "5.0.4"
 
 
 #rustpython = { git = "https://github.com/RustPython/RustPython.git" }
