--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -29,7 +29,7 @@ tinyset = "0.4.10"
 
 anyhow.workspace = true
 serde.workspace = true
-serde_json.workspace = true
+serde_json = "=1.0.115"
 uuid.workspace = true
 serde_derive.workspace = true
 tokio.workspace = true
