--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -51,6 +51,7 @@ wasm-bindgen-futures = "0.4.42"
 webbrowser = { version = "0.8.2", optional = true }
 serde_yaml = "0.8.26"
 regex = "1.10.4"
+bevy_framepace = "0.17.1"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 arboard = { version = "3.2.0", optional = true }
@@ -60,6 +61,7 @@ thread_local = { version = "1.1.0", optional = true }
 target-lexicon = "0.12"
 dirs = "3.0"
 pyo3-build-config = "0.19.1"
+
 
 # https://github.com/mvlabat/bevy_egui/blob/main/Cargo.toml
 [features]
