--- a/toolchain/chidori-prompt-format/Cargo.toml
+++ b/toolchain/chidori-prompt-format/Cargo.toml
@@ -21,6 +21,7 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json = "=1.0.115"
 serde_yaml = "0.9"
+thousand_birds_handlebars = "5.0.0"
 
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -30,9 +31,9 @@ serde_yaml = "0.9"
 console_error_panic_hook = { version = "0.1.7", optional = true }
 lazy_static = "1.4.0"
 
-[dependencies.handlebars]
-git = "https://github.com/ThousandBirdsInc/handlebars-rust"
-rev = "fc73bb228665d27e476c5ea8c270fea79b2290cf"
+#[dependencies.handlebars]
+#git = "https://github.com/ThousandBirdsInc/handlebars-rust"
+#rev = "fc73bb228665d27e476c5ea8c270fea79b2290cf"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
