--- a/toolchain/chidori-prompt-format/Cargo.toml
+++ b/toolchain/chidori-prompt-format/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+description = "Chidori Prompt Format is a package for creating traceable handlebars based LLM prompts"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
