--- a/toolchain/chidori-static-analysis/Cargo.toml
+++ b/toolchain/chidori-static-analysis/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+description = "Chidori Static Analysis is part of the Chidori framework, this identifies the exposure of values in JavaScript, TypeScript and Python code in order to support wiring dependent code together"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
