--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -63,8 +63,8 @@ sha1 = "0.10.5"
 # Support for parsing python
 rustpython-parser = "0.3.0"
 
-chidori-prompt-format = { path = "../chidori-prompt-format" }
-chidori-static-analysis = { path = "../chidori-static-analysis" }
+chidori-prompt-format = { path = "../chidori-prompt-format", version = "0.1.35" }
+chidori-static-analysis = { path = "../chidori-static-analysis", version = "0.1.3" }
 
 indexmap = "2.2.6"
 dashmap = "5.5.3"
