--- a/toolchain/chidori-core/Cargo.toml
+++ b/toolchain/chidori-core/Cargo.toml
@@ -22,7 +22,7 @@ indoc.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
 # Rust compiler is not able to identify across crates that workspace dependencies are identical (bug?)
-serde_json = "=1.0.115"
+serde_json = "=1.0.128"
 uuid.workspace = true
 tonic.workspace = true
 prost.workspace = true
@@ -38,7 +38,6 @@ thiserror.workspace = true
 
 fancy-regex = "0.13.0"
 tokio-cron-scheduler = "0.10.0"
-axum = "0.7.4"
 regex = "1.10.3"
 ariadne = "0.3.0"
 chumsky = "0.9.3"
@@ -71,9 +70,10 @@ dashmap = "5.5.3"
 
 # TODO: make optional
 yaml-front-matter = "0.1.0"
-deno = "1.41.3"
-deno_runtime = "0.150.0"
-deno_core = "0.272.0"
+#deno = "1.46.3"
+thousand_birds_deno = "1.46.3"
+#deno_runtime = "0.177.0"
+deno_core = "=0.307.0"
 #starlark = { version = "0.9.0"}
 http-body-util = "0.1.0-rc.2"
 qdrant-client = "1.3.0"
@@ -107,7 +107,7 @@ tracing-opentelemetry = "0.23.0"
 opentelemetry-semantic-conventions = "0.14.0"
 no_deadlocks = "1.3.2"
 # ollama-rs = { version = "0.1.0", features = ["stream"] }
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+rusqlite.workspace = true
 which = "4.4.2"
 
 [build-dependencies]
