--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -31,7 +31,7 @@ egui_json_tree = "0.6.0"
 dashmap = "5.5.3"
 anyhow.workspace = true
 serde.workspace = true
-serde_json = "=1.0.115"
+serde_json = "=1.0.128"
 uuid.workspace = true
 serde_derive.workspace = true
 tokio.workspace = true
@@ -42,7 +42,7 @@ syntect = "5.2.0"
 chidori-core = { path = "../chidori-core" }
 dirs = "5.0.1"
 target-lexicon = "0.12.14"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+rusqlite.workspace = true
 notify-debouncer-full = "0.3.1"
 once_cell = "1.19.0"
 crossbeam-channel = "0.5.12"
