--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -55,6 +55,8 @@ webbrowser = { version = "0.8.2", optional = true }
 serde_yaml = "0.8.26"
 regex = "1.10.4"
 bevy_framepace = "0.17.1"
+#bevy_assets_bundler = "0.6.0"
+lazy_static = "1.5.0"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 arboard = { version = "3.2.0", optional = true }
@@ -64,6 +66,8 @@ thread_local = { version = "1.1.0", optional = true }
 target-lexicon = "0.12"
 dirs = "3.0"
 pyo3-build-config = "0.19.1"
+#bevy_assets_bundler = "0.6.0"
+lazy_static = "1.5.0"
 
 
 # https://github.com/mvlabat/bevy_egui/blob/main/Cargo.toml
